# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2015-05-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add request_info, response_info, and response configuration
      arguments to cloudi_service_request_rate to make it more flexible

2015-04-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Small updates due to version change

2015-04-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.5.0 released

2015-04-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix limit service configuration option bug
      (resource limits on OS processes are now tested/working)

2015-04-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the CloudI Service API nodes_set timestamp_type option 'warp'
      (requires at least Erlang 18)

2015-04-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_future and cloudi_service_future to provide Futures

2015-04-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Erlang 18.0 compatibility fixes
        * cloudi module now returns a 2 element tuple with the 1st element
          as the result (the original return value) and the 2nd element
          as the modified Context or the Dispatcher pid
          (necessary due to the transaction id being strictly
           monotonically increasing and to handle the lazy destination
            refresh updates of service name pattern lookup data)
            * cloudi:agent() is a new type for cloudi module usage that is
              a cloudi:context() or a cloudi_service:dispatcher()
        * service module does not call the cloudi module to retain the same
          type specification as the cloudi_service module for the return values
    * Update uuid
    * Change ERLANG_OTP_VER_ erlc prefix defines to ERLANG_OTP_VERSION_

2015-03-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add resource limits on OS processes used for external services
